--- a/src/main/resources/templates/admin/admHeader.html
+++ b/src/main/resources/templates/admin/admHeader.html
@@ -17,6 +17,8 @@
     <script type="text/javascript" th:src="@{/js/bootstrap-datepicker.js}"></script>
 
     <script type="text/javascript" th:src="@{/js/bootstrap-datepicker.es.js}"></script>
+    <script type="text/javascript" th:src="@{/js/bootstrap-table-es-AR.min.js}"></script>
+
 
 
 </head>
