--- a/src/main/resources/templates/admin/admHeader.html
+++ b/src/main/resources/templates/admin/admHeader.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-table.min.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap-datepicker3.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/formValidation.css}"/>
+
 
     <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
     <script type="text/javascript" th:src="@{/js/bootstrap-table.min.js}"></script>
@@ -18,6 +20,8 @@
 
     <script type="text/javascript" th:src="@{/js/bootstrap-datepicker.es.js}"></script>
     <script type="text/javascript" th:src="@{/js/bootstrap-table-es-AR.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/formValidation.js}"></script>
+    <script type="text/javascript" th:src="@{/js/formValidation-bootstrap.js}"></script>
 
 
 
