--- a/src/main/resources/templates/admin/admEventos.html
+++ b/src/main/resources/templates/admin/admEventos.html
@@ -136,27 +136,26 @@
             </div>
             <div class="modal-body">
 
-                <form id="formEditarEvento" role="form">
-                    <input type="hidden" class="form-control" id="idUsuarioEditar" />
+                <form id="formEditarEvento" name="formEditarEvento" role="form">
                     <div class="container-fluid">
                         <div class="row">
 
                             <input type="hidden" class="form-control" id="idEventoEditar" />
                             <div class="col-md-6">
-                                <label for="dia">dia</label>
-                                <input type="text" class="form-control" id="diaEventoEditar" />
+                                <label for="dia">* dia</label>
+                                <input type="text" class="form-control" id="diaEventoEditar" name="diaEventoEditar" onchange="revalidarDiasEditar()" />
                             </div>
                             <div class="col-md-6">
-                                <label for="horario">Horario</label>
-                                <input type="text" class="form-control" id="horarioEventoEditar" />
+                                <label for="horario">* Horario</label>
+                                <input type="text" class="form-control" id="horarioEventoEditar" name="horarioEventoEditar"/>
                             </div>
 
                         </div>
 
                         <div class="row">
                             <div class="col-md-12">
-                                <label for="direccion">Dirección</label>
-                                <input type="text" class="form-control" id="direccionEventoEditar" />
+                                <label for="direccion">* Dirección</label>
+                                <input type="text" class="form-control" id="direccionEventoEditar" name="direccionEventoEditar" />
                             </div>
 
 
@@ -164,21 +163,21 @@
                         <div class="row">
 
                             <div class="col-md-6">
-                                <label for="rol">Lugar</label>
-                                <input type="text" class="form-control" id="lugarEventoEditar" />
+                                <label for="rol">* Lugar</label>
+                                <input type="text" class="form-control" id="lugarEventoEditar" name="lugarEventoEditar"/>
 
                             </div>
                             <div class="col-md-6">
-                                <label for="rol">Barrio</label>
-                                <input type="text" class="form-control" id="barrioEventoEditar" />
+                                <label for="rol">* Barrio</label>
+                                <input type="text" class="form-control" id="barrioEventoEditar"  name="barrioEventoEditar"/>
 
                             </div>
 
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <label for="rol">Consultas</label>
-                                <input type="text" class="form-control" id="consultasEventoEditar" />
+                                <label for="rol">* Consultas</label>
+                                <input type="text" class="form-control" id="consultasEventoEditar" name="consultasEventoEditar"/>
 
                             </div>
                         </div>
@@ -312,7 +311,72 @@
 
         cargarTablaEventos();
 
-        $('#altaUsuarioForm').formValidation({
+
+        $('#formEditarEvento').formValidation({
+            framework : 'bootstrap',
+            icon : {
+                invalid : 'glyphicon glyphicon-remove',
+                validating : 'glyphicon glyphicon-refresh'
+            },
+            excluded : ':disabled',
+            fields : {
+
+                diaEventoEditar: {
+                    validators: {
+                        notEmpty : {
+                            message : 'No puede ser vacio'
+                        }
+                    }
+                },
+                horarioEventoEditar: {
+                    validators: {
+                        notEmpty : {
+                            message : 'No puede ser vacio'
+                        }
+                    }
+                },
+
+                direccionEventoEditar: {
+                    validators: {
+                        notEmpty : {
+                            message : 'No puede ser vacio'
+                        }
+                    }
+                },
+                lugarEventoEditar: {
+                    validators: {
+                        notEmpty : {
+                            message : 'No puede ser vacio'
+                        }
+                    }
+                },
+                barrioEventoEditar: {
+                    validators: {
+                        notEmpty : {
+                            message : 'No puede ser vacio'
+                        }
+                    }
+                },
+                consultasEventoEditar: {
+                    validators: {
+                        notEmpty : {
+                            message : 'No puede ser vacio'
+                        }
+                    }
+                }
+
+            }
+        });
+
+
+
+
+
+
+
+
+
+    $('#altaUsuarioForm').formValidation({
             framework : 'bootstrap',
             icon : {
                 invalid : 'glyphicon glyphicon-remove',
@@ -377,6 +441,10 @@
             'dias');
     }
 
+    function revalidarDiasEditar() {
+        $("#formEditarEvento").formValidation('revalidateField',
+            'diaEventoEditar');
+    }
     function cargarTablaEventos() {
         $.ajax({
             type: 'GET',
@@ -523,7 +591,6 @@
     }
 
     function confirmaEditarEvento(){
-        $('#modalEditarEvento').hide();
 
 
         var data = {
@@ -538,25 +605,37 @@
 
         };
 
-        $.ajax({
-            type: 'POST',
-            url: '../eventos/editarEvento',
-            data:JSON.stringify(data),
-
-            contentType: 'application/json; charset=utf-8',
-            success: function(response) {
-                console.log(response)
-                $('#textoEditarEvento').text(response);//cargamos el texto de respuesta del servidor
-                $('#modalRespuestaEditarEvento').show();//mostramos popup con respuesta
-
-                cargarTablaEventos();//recargamos la tabla de eventos actualizada
+        $('#formEditarEvento').formValidation();
+        $('#formEditarEvento').data('formValidation').validate();
+        var validForm = $('#formEditarEvento').data('formValidation').isValid()
 
 
-            },
-            error: function(error) {
-                console.log(error);
-            }
-        });
+
+        if (validForm == true) {
+            $('#modalEditarEvento').hide();
+
+            $.ajax({
+                type: 'POST',
+                url: '../eventos/editarEvento',
+                data: JSON.stringify(data),
+
+                contentType: 'application/json; charset=utf-8',
+                success: function (response) {
+                    console.log(response)
+                    $('#textoEditarEvento').text(response);//cargamos el texto de respuesta del servidor
+                    $('#modalRespuestaEditarEvento').show();//mostramos popup con respuesta
+
+                    cargarTablaEventos();//recargamos la tabla de eventos actualizada
+
+
+                },
+                error: function (error) {
+                    console.log(error);
+                }
+            });
+        }else{
+            return false;
+        }
     }
 
     function limpiarCampos() {
